# india-auto-trader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  auto_trader.py  daily_stock_picker.py  kotak_mcp_server.py  local_db.py  pyproject.toml  requirements.txt  scan_watchlist.py  start_paper_trading.bat  supabase_client.py  vercel.json
.claude/: settings.json
backend/: main.py  trade_engine.py
backtesting/: capital_sim.py  intraday_backtester.py  live_signal_scan.py  metrics.py  paper_trader.py  strategy_backtester.py
broker/: kotak_direct.py  paper_broker.py
claude_trader/: __init__.py  backtester.py  chart_builder.py  daily_logger.py  news_picker.py
config/: __init__.py  instruments.py  settings.py  strategy_profiles.py
data_collector/: collect_all.py  earnings_calendar.py  fii_dii.py  fundamental.py  intraday_scanner.py  kotak_realtime.py  market_data.py  news_collector.py  option_chain.py  penny_stocks.py  social_sentiment.py  tradingview_collector.py  twitter_sentiment.py
deploy/: auto_trader.cron  oracle_setup.sh
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
llm_analyzer/: analyzer.py
mcp_server/: kotak_mcp.py
mcp_servers/: __init__.py  claude_trader.py  kotak_neo.py
monitoring/: alerts.py  pnl_tracker.py  telegram_bot.py
risk/: __init__.py  circuit_breaker.py  math_engine.py  position_sizer.py
strategies/: base.py  bollinger_squeeze.py  cpr.py  ema_stack.py  engine.py  gap_and_go.py  macd_rsi_confluence.py  mean_reversion.py  momentum.py  orb.py  supertrend.py  vwap_reversion.py
supabase/: schema.sql  trade_journal_migration.sql
tests/: test_kotak_connection.py
(+46 files in other folders)
